# anchorpy

./: .bumpversion.cfg  .eslintrc.js  .flake8  .gitattributes  .gitignore  .gitmodules  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  differences.md  index.html  mkdocs.yml  mypy.ini  noxfile.py  objects.inv  package.json  pyproject.toml  pytest.ini  python_version.py  sitemap.xml  throwaway.py
.github/workflows/: check_optional_deps.yml  docs.yml  lint.yml  nox.yml  python_version.yml  release.yml  tests.yaml  tests.yml
anchorpy/: borsh.py  borsh_extension.py  idl.py  main.py  provider.py  public_key.py
anchorpy/coder/: accounts.py  coder.py  common.py  event.py  idl.py  instruction.py  state.py  types.py
anchorpy/program/: __init__.py  common.py  context.py
anchorpy/program/namespace/: account.py  instruction.py  namespace.py  rpc.py  simulate.py  state.py  transaction.py
cli/: index.html
clientgen/: index.html
css/: custom.css  mkdocstrings.css
docs/: api_reference.md  cli.md  comparison_with_anchor_ts.md  index.md  reference.md  requirements.txt  testing.md  tutorial.md
docs/cli/: index.md
docs/clientgen/: index.md
docs/dynamic_client/: api_reference.md  examples.md  index.md
docs/testing/: index.md
dynamic_client/: index.html
dynamic_client/api_reference/: index.html
dynamic_client/comparison_with_anchor_ts/: index.html
dynamic_client/examples/: index.html
examples/basic-2/: README.md
examples/basic-2/generated-client/instructions/: increment.ts
examples/client-gen/basic_2/accounts/: __init__.py  counter.py
examples/client-gen/basic_2/errors/: __init__.py
examples/client-gen/basic_2/instructions/: __init__.py  create.py  increment.py
examples/client-gen/tictactoe/: program_id.py
examples/client-gen/tictactoe/accounts/: __init__.py  game.py
examples/client-gen/tictactoe/errors/: __init__.py  anchor.py  custom.py
examples/client-gen/tictactoe/instructions/: __init__.py  play.py  setup_game.py
examples/client-gen/tictactoe/types/: __init__.py  game_state.py  sign.py  tile.py
examples/tic-tac-toe/generated-client/accounts/: Game.ts
examples/tic-tac-toe/generated-client/types/: GameState.ts  index.ts
idls/: basic_4.json  chat.json  composite.json  counter.json  events.json  ido_pool.json  lockup.json  misc.json  misc2.json  puppet.json  puppet_master.json  pyth.json  registry.json  sysvars.json  zero_copy.json
js/: termynal.js
overrides/: main.html
search/: search_index.json
src/: common.ts  programId.ts
src/anchorpy/: __init__.py  borsh_extension.py  cli.py  error.py  idl.py  main.py  provider.py  pytest_plugin.py  template.py  workspace.py
src/anchorpy/clientgen/: accounts.py  common.py  errors.py  genpy_extension.py  instructions.py  program_id.py  project.py  types.py  utils.py
src/anchorpy/coder/: __init__.py  accounts.py  coder.py  common.py  event.py  idl.py  instruction.py  types.py
src/anchorpy/program/: __init__.py  common.py  context.py  core.py  event.py
src/anchorpy/program/namespace/: __init__.py  account.py  instruction.py  methods.py  namespace.py  rpc.py  simulate.py  transaction.py  types.py
src/anchorpy/utils/: __init__.py  rpc.py  token.py
testing/: index.html
tests/: README.md  conftest.py  test_anchorpy.py  test_basic_0.py  test_basic_1.py  test_basic_2.py  test_basic_3.py  test_basic_3_bankrun.py  test_cashiers_check.py  test_cfo.py  test_chat.py  test_cli.py  test_cli_init.py  test_composite.py  test_errors.py  test_escrow.py  test_events.py  test_ido_pool.py  test_misc.py  test_misc_core.py  test_misc_core_bankrun.py  test_multisig.py  test_pyth.py  test_swap.py  test_system_accounts.py  test_sysvars.py  test_tmp.py  test_token_proxy.py  test_zero_copy.py  utils.py
tests/client-gen/: test_client_gen.py
tests/client-gen/example_program_gen/accounts/: state.py  state2.py
tests/client-gen/example_program_gen/errors/: __init__.py
tests/client-gen/example_program_gen/instructions/: __init__.py  initialize_with_values.py  initialize_with_values2.py
tests/client-gen/example_program_gen/types/: bar_struct.py  foo_enum.py  foo_struct.py
tests/client_gen/: test_client_gen.py  test_functional.py
tests/client_gen/example-program/: Anchor.toml
tests/client_gen/example-program/programs/example-program/: Cargo.toml
tests/client_gen/example-program/programs/example-program/src/: lib.rs
tests/client_gen/example_program_gen/: program_id.py
tests/client_gen/example_program_gen/accounts/: __init__.py  base_account.py  my_account.py  state.py  state2.py
tests/client_gen/example_program_gen/errors/: __init__.py  anchor.py  custom.py
tests/client_gen/example_program_gen/instructions/: __init__.py  cause_error.py  increment_state_when_present.py  init_my_account.py  initialize.py  initialize_with_values.py  initialize_with_values2.py  type_alias.py
tests/client_gen/example_program_gen/types/: __init__.py  bar_struct.py  foo_enum.py  foo_struct.py  u8_array.py
tests/client_gen/token/: program_id.py
tests/client_gen/token/accounts/: __init__.py  account.py  mint.py  multisig.py
tests/client_gen/token/errors/: __init__.py  custom.py
tests/idls/: basic_0.json  basic_1.json  basic_2.json  basic_5.json  candy_machine.json  cashiers_check.json  clientgen_example_program.json  counter_auth.json  errors.json  escrow.json  jet.json  jet_auth.json  jet_rewards.json  merkle_distributor.json  multisig.json  quarry_mine.json  sol_cerberus.json  spl_token.json  swap.json  switchboard.json  switchboard_v2.mainnet.06022022.json  tictactoe.json  typescript.json
tests/unit/: test_accounts_array.py  test_accounts_coder.py  test_clientgen.py  test_event_parser.py  test_gen_accounts.py  test_idl.py  test_instruction_coder.py  test_transaction.py  test_types_coder.py
ts-reference/: .gitignore  CHANGELOG.md  LICENSE  README.md  tsconfig.build.json  tsconfig.json
ts-reference/examples/basic-2/: idl.json
ts-reference/examples/tic-tac-toe/: README.md  idl.json
ts-reference/src/: accounts.ts  errors.ts  instructions.ts  main.ts  types.ts
ts-reference/tests/: test.ts
(+60 files in other folders)
