[tool.poetry]
name = "anchorpy"
version = "0.17.1"
description = "The Python Anchor client."
readme = "README.md"
repository = "https://github.com/kevinheavey/anchorpy"
documentation = "https://kevinheavey.github.io/anchorpy/"
authors = ["kevinheavey <kevinheavey123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
construct-typing = "^0.5.1"
solana = "^0.30.1"
solders = "^0.17.0"
borsh-construct = "^0.1.0"
websockets = ">=9.0,<11.0"
toolz = "^0.11.2"
jsonrpcclient = "^4.0.1"
zstandard = "^0.18.0"
pytest = "^7.2.0"
pytest-xprocess = "^0.18.1"
pytest-asyncio = "^0.21.0"
more-itertools = "^8.11.0"
pyheck = "^0.1.4"
typer = { version = "0.4.1", optional = true }
ipython = { version = "^8.0.1", optional = true }
genpy = { version = "^2021.1", optional = true }
black = { version = "^22.3.0", optional = true }
autoflake = { version = "^1.4", optional = true }
based58 = "^0.1.1"
anchorpy-core = "^0.1.2"
py = "^1.11.0"
toml = "^0.10.2"

[tool.poetry.extras]
cli = ["typer", "ipython", "genpy", "black", "autoflake"]


[tool.poetry.scripts]
anchorpy = "anchorpy.cli:app"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
jinja2 = "3.0.3"
mkdocs-material = "^8.1.7"
bump2version = "^1.0.1"
mkdocstrings = "^0.17.0"
ruff = "^0.0.220"

[tool.poetry.plugins.pytest11]
pytest_anchorpy = "anchorpy.pytest_plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "A",
    "B",
    "D",
    "E",
    "F",
    "I",
    "ARG",
    "BLE",
    "C4",
    "SIM",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
ignore = ["B023", "D100", "D101", "D102", "D103", "D104", "D107", "D203"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"src/anchorpy/coder/*.py" = ["ARG002"]
"src/anchorpy/borsh_extension.py" = ["ARG002"]
"tests/**/*.py" = ["ARG001", "E501"]
"tests/client_gen/example_program_gen/**/*.py" = ["C417", "I001", "F401"]
"tests/client_gen/token/**/*.py" = ["C417", "I001", "F401"]
"src/anchorpy/cli.py" = ["B008"]

[tool.pyright]
reportMissingModuleSource = false
