[project]
name = "anchorpy"
version = "0.21.0"
description = "The Python Anchor client."
authors = [{ name = "kevinheavey", email = "kevinheavey123@gmail.com" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "construct-typing>=0.5.1,<0.6",
    "solana>=0.36.1,<1.0",
    "solders>=0.21.0,<1.0",
    "borsh-construct>=0.1.0,<0.2",
    "toolz>=0.11.2,<0.12",
    "pyheck>=0.1.4,<0.2",
    "based58>=0.1.1,<0.2",
    "anchorpy-core>=0.2.0,<0.3",
    "toml>=0.10.2,<0.11",
]

[project.optional-dependencies]
cli = [
    "typer==0.4.1",
    "ipython>=8.0.1,<9",
    "genpy~=2021.1",
    "black>=22.3.0,<23",
    "autoflake~=1.4",
]
pytest = [
    "pytest>=7.2.0,<8",
    "py>=1.11.0,<2",
    "pytest-xprocess>=0.18.1,<0.19",
    "pytest-asyncio>=0.21.0,<0.22",
]

[project.urls]
Repository = "https://github.com/kevinheavey/anchorpy"
Documentation = "https://kevinheavey.github.io/anchorpy/"

[project.scripts]
anchorpy = "anchorpy.cli:app"

[project.entry-points.pytest11]
pytest_anchorpy = "anchorpy.pytest_plugin"

[dependency-groups]
dev = [
    "black>=22.3.0,<23",
    "mypy>=0.982,<0.983",
    "jinja2==3.0.3",
    "mkdocs-material>=8.1.7,<9",
    "bump2version>=1.0.1,<2",
    "mkdocstrings>=0.17.0,<0.18",
    "py>=1.11.0,<2",
    "pytest>=7.2.0,<8",
    "pytest-asyncio>=0.21.0,<0.22",
    "pytest-xprocess>=0.18.1,<0.19",
    "ruff>=0.0.220,<0.0.221",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = [
    "A",
    "B",
    "D",
    "E",
    "F",
    "I",
    "ARG",
    "BLE",
    "C4",
    "SIM",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
ignore = ["B023", "D100", "D101", "D102", "D103", "D104", "D107", "D203"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"src/anchorpy/__init__.py" = ["F401"]
"src/anchorpy/coder/*.py" = ["ARG002"]
"src/anchorpy/borsh_extension.py" = ["ARG002"]
"tests/**/*.py" = ["ARG001", "E501"]
"tests/client_gen/example_program_gen/**/*.py" = ["C417", "I001", "F401"]
"tests/client_gen/token/**/*.py" = ["C417", "I001", "F401"]
"src/anchorpy/cli.py" = ["B008"]

[tool.pyright]
reportMissingModuleSource = false
